apps/nproject/nproject-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nproject-backend-svc
  namespace: prod
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
