apps/nproject/nproject-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nproject-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - nproject.site
    secretName: nproject-site-tls
  rules:
  - host: nproject.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nproject-backend-svc
            port:
              number: 80
